Fixed line spacing.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,7 +14,7 @@
 
 .balloon {
     font-family: 'Gugi', cursive;
-    line-height: 0.5;
+    line-height: 1.2;
     text-align: left;
 }
 
